=======
CHANGES
=======

1.2.0 (unreleased)
------------------

* Allow use of ``z3c.pt`` using ``z3c.ptcompat`` compatibility layer.

* Forward the template kwargs to the options of the macro

* Changed package's mailing list address to zope-dev at zope.org
  instead of retired one.

1.1.0 (2007-10-08)
------------------

* Added an ``IContentTemplate`` interface which is used for 
  ``<z3c:template>``.

1.0.0 (2007-??-??)
------------------

* Initial release.